<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    android:background="@drawable/blubg" 
    android:paddingLeft="@dimen/activity_horizontal_margin" 
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:paddingRight="@dimen/activity_horizontal_margin" 
    android:paddingBottom="@dimen/activity_vertical_margin" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView 
        android:textSize="25.0sp" 
        android:textColor="#ffffffff" 
        android:gravity="center" 
        android:id="@+id/textView1" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/create" 
        android:layout_alignRight="@+id/btnregister" 
        android:layout_alignParentTop="true" />
    <Button 
        android:textSize="20.0sp" 
        android:textColor="#ffffffff" 
        android:id="@id/btnregister" 
        android:background="@drawable/blu" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/register" 
        android:layout_alignParentBottom="true" 
        android:layout_centerHorizontal="true" />
    <EditText 
        android:textSize="25.0sp" 
        android:gravity="center" 
        android:id="@+id/fieldname" 
        android:background="#ffffffff" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="56.0dip" 
        android:text="@string/name" 
        android:ems="10" 
        android:layout_below="@+id/textView1" 
        android:layout_alignLeft="@+id/textView1" 
        android:inputType="textPersonName" />
    <EditText 
        android:textSize="25.0sp" 
        android:gravity="center" 
        android:id="@+id/fielduid" 
        android:background="#ffffffff" 
        android:layout_width="100.0dip" 
        android:layout_height="wrap_content" 
        android:text="@string/newuser" 
        android:ems="10" 
        android:layout_alignLeft="@+id/fieldname" 
        android:layout_alignRight="@+id/fieldname" 
        android:layout_centerVertical="true" 
        android:inputType="text" />
    <EditText 
        android:textSize="25.0sp" 
        android:gravity="center" 
        android:id="@+id/fieldpass" 
        android:background="#ffffffff" 
        android:layout_width="100.0dip" 
        android:layout_height="wrap_content" 
        android:layout_marginBottom="54.0dip" 
        android:text="@string/password" 
        android:ems="10" 
        android:layout_above="@+id/btnregister" 
        android:layout_alignLeft="@+id/btnregister" 
        android:layout_alignRight="@+id/btnregister" 
        android:inputType="textPassword">
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnvld"
        android:layout_width="75.0dip"
        android:layout_height="35.0dip"
        android:layout_alignLeft="@+id/fielduid"
        android:layout_below="@+id/fielduid"
        android:layout_marginTop="14dp"
        android:background="@drawable/blu"
        android:text="@string/validate"
        android:textColor="#ffffffff"
        android:textSize="12.0sp" />

    <TextView
        android:id="@+id/valid"
        android:layout_width="200.0dip"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnvld"
        android:layout_alignBottom="@+id/btnvld"
        android:layout_alignRight="@+id/fielduid"
        android:gravity="center"
        android:text="@string/validid"
        android:textSize="15.0sp"
        android:textStyle="bold" />

</RelativeLayout>
