<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/wp" 
    android:paddingLeft="@dimen/activity_horizontal_margin" 
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:paddingRight="@dimen/activity_horizontal_margin" 
    android:paddingBottom="@dimen/activity_vertical_margin" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    tools:context=".Login" >
<!-- MARAUDER -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="51dip" 
        android:text="@string/byaakash" 
        android:layout_alignTop="@+id/textView2" 
        android:layout_alignRight="@+id/textView2" />

    <TextView
        android:textSize="40.0sp" 
        android:id="@+id/textView2" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/app_name" 
        android:layout_alignRight="@+id/btnregister" 
        android:layout_alignParentTop="true" />

    <Button
        android:textSize="12.0sp" 
        android:textColor="#ffffffff" 
        android:id="@+id/btnregister" 
        android:background="@drawable/blu" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/newtoapp" 
        android:layout_alignParentBottom="true" 
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/fieldpwd"
        android:layout_width="100.0dip"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnlogin"
        android:layout_alignLeft="@+id/fielduser"
        android:layout_alignRight="@+id/fielduser"
        android:layout_marginBottom="20.0dip"
        android:background="#ffffffff"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textSize="25.0sp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnregister"
        android:layout_alignLeft="@+id/btnregister"
        android:layout_alignRight="@+id/fieldpwd"
        android:layout_marginBottom="40.0dip"
        android:background="@drawable/blu"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#ffffffff"
        android:textSize="15.0sp" />

    <EditText
        android:id="@+id/fielduser"
        android:layout_width="100.0dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnregister"
        android:layout_alignRight="@+id/textView1"
        android:layout_centerVertical="true"
        android:background="#ffffffff"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/username"
        android:textSize="25.0sp" />

</RelativeLayout>
